<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Mindlr</string>
    <string name="server_client_id">319486160725-gksup5cr2bgric18al3q6h47h3p23dia.apps.googleusercontent.com</string>
    <string name="twitter_key">8dn7CD8mwmIqdKPRnuWiLZKaH</string>
    <string name="twitter_secret">AljLkSKcPFSC8vTV1OqeZeUoWsX7fm0i0bmdeUpCGcmrLdlBxO</string>
    <string name="youtube_developer_key">AIzaSyAP0ElEVb5ptM1ljBvkKkUJ6aY94SQQlYE</string>

    <!-- Activity labels -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_write_post">WritePostActivity</string>
    <string name="title_activity_user_posts">Posts</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="title_activity_profile_actvitiy">Profil</string>
    <string name="title_activity_settings">Settings</string>

    <!-- menu action string -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_report">Report</string>

    <string name="activity_login_welcome_message">Willkommen \n zu \n Mindlr! \n Bitte logge dich ein</string>

    <!-- Navigation Drawer items -->
    <string name="profile">Profil</string>
    <string name="drafts">Entwürfe</string>
    <string name="settings">Einstellungen</string>
    <string name="help">Hilfe</string>

    <!-- Settings strings -->
    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="pref_notification_true">Enabled</string>
    <string name="pref_notification_false">Not Enabled</string>
    <string name="pref_notification_default" translatable="false">true</string>
    <string name="pref_notification_label">Post Notifications</string>

    <string name="pref_post_storage_key" translatable="false">store_post</string>
    <string name="pref_post_storage_default" translatable="false">true</string>
    <string name="pref_post_storage_true">Allowed</string>
    <string name="pref_post_storage_false">Not Allowed</string>
    <string name="pref_post_storage_label">Store Posts on Device</string>

    <string name="pref_authentication_key" translatable="false">authentication</string>
    <string name="pref_authentication_true" translatable="false">true</string>
    <string name="pref_authentication_false" translatable="false">false</string>
    <string name="pref_authentication_default" translatable="false">@string/pref_authentication_false</string>
    <string name="pref_authentication_setting_label">Sign Out</string>

    <string name="pref_first_start_key" translatable="false">startup</string>
    <string name="pref_first_start_true" translatable="false">true</string>
    <string name="pref_first_start_false" translatable="false">false</string>

    <!-- Setting groups-->
    <string name="pref_group_notification_storage">Notification and Storage</string>
    <string name="pref_group_account">Account</string>

    <!--Confirm Dialog -->
    <string name="alert_warning">Warning</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_message">Disabling this setting will remove all local data from the device. This operation cannot be undone!</string>

    <!-- NavDrawer string for accessibility -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Auth Provider related strings -->
    <string name="google_provider">GOOGLE</string>
    <string name="twitter_provider">TWITTER</string>

    <!-- error messages -->
    <string name="auth_error_network_unavailable">Anmeldung fehlgeschlagen. Netzwerk nicht erreichbar</string>
    <string name="auth_error_unknown">Anmeldung fehlgeschlagen</string>

    <!-- Intro/Tutorial-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_0_title">Explore yourself!</string>
    <string name="slide_0_desc">We learn what you love and show tailor-made recommendations just for you!</string>

    <string name="slide_1_title">Swipe to success!</string>
    <string name="slide_1_desc">Swipe right to like a post, or swipe left if you don\'t want to see similar posts in the future.</string>

    <string name="slide_2_title">One more thing…</string>
    <string name="slide_2_desc">To help us learn about your interests, please choose some topics you like on the next slide. Thanks!</string>

    <!-- UP/DOWN votes in % -->
    <string name="format_vote_percentage"><xliff:g id="vote">%1.0f</xliff:g> %%</string>
    <string name="post_send_failure_msg">Senden fehlgeschlagen. Post als Entwurf gespeichert.</string>

    <!-- Date format for like/write [Liked 30 seconds ago, Written today, Liked 30 Feb] -->
    <string name="date_format">%1$s %2$d second %4$s</string>

    <!-- Liked/Written 30 seconds ago -->
    <string name="time_ago">%1$s %2$s ago</string>
    <!-- Liked/Written Tuesday -->
    <string name="time_weekday">%1$s %2$s</string>
    <!-- Liked on 5 Jan -->
    <string name="time_day_with_month">%1$s on %2$s</string>
    <!-- Liked/Written Today/Yesterday -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="time_day">%1$s %2$s</string>

    <!-- Format start string -->
    <string name="liked">Liked</string>
    <string name="written">Written</string>
    <string name="already_registered">Already registered?</string>
    <string name="category_choose">Choose 3 or more Categories!</string>
    <string name="sign_in_skip">Sign In</string>
    <string name="change_layout_order">Change Layout Order</string>

    <!-- Category display names-->
    <string name="art_culture">Kunst &amp; Kultur</string>
    <string name="funny_fascinating">Lustig &amp; Faszinierend</string>
    <string name="gaming">Spiele</string>
    <string name="lifestyle_male">Man Lifestyle</string>
    <string name="lifestyle_female">Women Lifestyle</string>
    <string name="news">Nachrichten</string>
    <string name="personal">Persönlich</string>
    <string name="politics_economics">Politik &amp; Wirtschaft</string>
    <string name="popculture">Popkultur</string>
    <string name="quotes_motivation">Motivation</string>
    <string name="science_nature">Naturwissenschaften</string>
    <string name="sports">Sport</string>
    <string name="technology">Technologie</string>
    <string name="select_categories">Select Categories</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="no_internet_available">Kein Internet verfügbar</string>
    <string name="write">Write</string>
    <string name="post_reported_message">Post wurde gemeldet.</string>
    <string name="post_empty_not_allowed">Der Post muss Inhalt haben</string>
</resources>
