<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_write"
        android:checkable="true"
        android:icon="@drawable/ic_write_24dp"
        android:title="@string/write"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:checkable="true"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_report"
        android:checkable="true"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/action_report"
        app:showAsAction="ifRoom" />



</menu>