<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:background="@color/primary"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/category_choose"
        android:textColor="@color/white"
        android:textSize="28sp"/>

    <ScrollView
        android:id="@+id/categories_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4">

        <com.anton46.collectionitempicker.CollectionPicker
            android:id="@+id/collection_item_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cp_addIcon="@drawable/ic_add_24dp"
            app:cp_cancelIcon="@drawable/ic_check_24dp"
            app:cp_itemBackgroundNormal="@color/primary_dark"
            app:cp_itemBackgroundPressed="#FE7852"
            app:cp_itemMargin="10dp"
            app:cp_simplified="false"
            app:cp_textPaddingBottom="10dp"
            app:cp_textPaddingLeft="10dp"
            app:cp_textPaddingRight="10dp"
            app:cp_textPaddingTop="10dp"
            app:theme="@style/CollectionPickerTheme"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/auth_button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/skip_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_registered"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="@string/already_registered"/>

        <TextView
            android:id="@+id/tutorial_skip_cat_selection_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:textColor="@color/linkblue"
            android:textSize="20sp"
            android:text="@string/sign_in_skip"
            tools:text="Sign In"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_signIn_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"/>

        <de.gamedots.mindlr.mindlrfrontend.view.customview.CustomTwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>